--- a/paginas/artefatos/style-artefatos.css
+++ b/paginas/artefatos/style-artefatos.css
@@ -1,9 +1,8 @@
 .artefatos{
-    margin: 10px;
-    width: 145px;
+    margin: 0.5%;
+    width: 11%;
 }
 
 .descricao{
     color: blue;
-    font-size: 20px;
 }
