--- a/style.css
+++ b/style.css
@@ -3,45 +3,89 @@ header {
     padding: 70px 0;
 }
 
+p {
+    margin: 7px;
+}
+
+h2 {
+    text-align: center;
+    font-size: 20px;
+    color: #201068;
+    margin: 20px;
+}
+
 .caixa {
     position: relative;
     width: 940px;
     margin: 0 auto;
 }
 
-nav {
+.nav-header {
     position: absolute;
     top: 380px;
     left: 0;
 }
 
-nav li {
+.li-header {
     display: inline;
     margin: 0 0 0 15px;
 }
 
-nav a {
-    text-transform: uppercase;
-    color: #201068;
-    font-weight: bold;
+.a-header {
     font-size: 22px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #201068;
     text-decoration: none;
 }
 
-nav a:hover {
+.a-header:hover {
     color: yellow;
     text-decoration: underline;
 }
 
 .intro {
-    color: blue;
+    text-align: left;
     font-size: 20px;
     margin: 20px 0 20px 60px;
-    text-align: left;
+}
+
+.redes-sociais {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #201068;
+    text-decoration: none;
+}
+
+.redes-sociais:hover {
+    color: yellow;
+    text-decoration: underline;
 }
 
 .banner {
     width: 100%;
+}
+
+.nav-consideracoes {
+    text-align: center;
+}
+
+.li-consideracoes {
+    font-size: 20px;
+}
+
+.a-consideracoes {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #201068;
+    text-decoration: none;
+}
+
+.a-consideracoes:hover {
+    color: yellow;
+    text-decoration: underline;
 }
 
 footer {
